content/_generated-doc/3.0/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc

:summaryTableId: quarkus-grpc-config-group-config-grpc-server-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server-configure-the-grpc-server]]link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server-configure-the-grpc-server[Configure the gRPC server]

h|Type
h|Default

a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.use-separate-server]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.use-separate-server[quarkus.grpc.server.use-separate-server]`

[.description]
--
Do we use separate HTTP server to serve gRPC requests. Set this to false if you want to use new Vert.x gRPC support, which uses existing Vert.x HTTP server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_USE_SEPARATE_SERVER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_USE_SEPARATE_SERVER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.xds.enabled]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.xds.enabled[quarkus.grpc.server.xds.enabled]`

[.description]
--
Explicitly enable use of XDS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_XDS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_XDS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.xds.secure]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.xds.secure[quarkus.grpc.server.xds.secure]`

[.description]
--
Use secure credentials.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_XDS_SECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_XDS_SECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.port]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.port[quarkus.grpc.server.port]`

[.description]
--
The gRPC Server port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`9000`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.test-port]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.test-port[quarkus.grpc.server.test-port]`

[.description]
--
The gRPC Server port used for tests.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_TEST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_TEST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`9001`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.host]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.host[quarkus.grpc.server.host]`

[.description]
--
The gRPC server host.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`0.0.0.0`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.handshake-timeout]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.handshake-timeout[quarkus.grpc.server.handshake-timeout]`

[.description]
--
The gRPC handshake timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_HANDSHAKE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_HANDSHAKE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.max-inbound-message-size]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.max-inbound-message-size[quarkus.grpc.server.max-inbound-message-size]`

[.description]
--
The max inbound message size in bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_MAX_INBOUND_MESSAGE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_MAX_INBOUND_MESSAGE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.max-inbound-metadata-size]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.max-inbound-metadata-size[quarkus.grpc.server.max-inbound-metadata-size]`

[.description]
--
The max inbound metadata size in bytes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_MAX_INBOUND_METADATA_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_MAX_INBOUND_METADATA_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.certificate]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.certificate[quarkus.grpc.server.ssl.certificate]`

[.description]
--
The classpath path or file path to a server certificate or certificate chain in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key[quarkus.grpc.server.ssl.key]`

[.description]
--
The classpath path or file path to the corresponding certificate private key file in PEM format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key-store]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key-store[quarkus.grpc.server.ssl.key-store]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files. The key store can be either on classpath or an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key-store-type]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key-store-type[quarkus.grpc.server.ssl.key-store-type]`

[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key-store-password]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.key-store-password[quarkus.grpc.server.ssl.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|`password`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.trust-store]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.trust-store[quarkus.grpc.server.ssl.trust-store]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust The trust store can be either on classpath or an external file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.trust-store-type]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.trust-store-type[quarkus.grpc.server.ssl.trust-store-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.trust-store-password]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.trust-store-password[quarkus.grpc.server.ssl.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.cipher-suites]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.cipher-suites[quarkus.grpc.server.ssl.cipher-suites]`

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.protocols]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.protocols[quarkus.grpc.server.ssl.protocols]`

[.description]
--
The list of protocols to explicitly enable.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.client-auth]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.ssl.client-auth[quarkus.grpc.server.ssl.client-auth]`

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_SSL_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_SSL_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `request`, `required` 
|`none`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.plain-text]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.plain-text[quarkus.grpc.server.plain-text]`

[.description]
--
Disables SSL, and uses plain text instead. If disabled, configure the ssl configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_PLAIN_TEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_PLAIN_TEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.alpn]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.alpn[quarkus.grpc.server.alpn]`

[.description]
--
Whether ALPN should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_ALPN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_ALPN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.transport-security.certificate]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.transport-security.certificate[quarkus.grpc.server.transport-security.certificate]`

[.description]
--
The path to the certificate file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_CERTIFICATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_CERTIFICATE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.transport-security.key]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.transport-security.key[quarkus.grpc.server.transport-security.key]`

[.description]
--
The path to the private key file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_TRANSPORT_SECURITY_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.enable-reflection-service]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.enable-reflection-service[quarkus.grpc.server.enable-reflection-service]`

[.description]
--
Enables the gRPC Reflection Service. By default, the reflection service is only exposed in `dev` mode. This setting allows overriding this choice and enable the reflection service every time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_ENABLE_REFLECTION_SERVICE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_ENABLE_REFLECTION_SERVICE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.instances]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.instances[quarkus.grpc.server.instances]`

[.description]
--
Number of gRPC server verticle instances. This is useful for scaling easily across multiple cores. The number should not exceed the amount of event loops.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_INSTANCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_INSTANCES+++`
endif::add-copy-button-to-env-var[]
--|int 
|`1`


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.netty.keep-alive-time]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.netty.keep-alive-time[quarkus.grpc.server.netty.keep-alive-time]`

[.description]
--
Sets a custom keep-alive duration. This configures the time before sending a `keepalive` ping when there is no read activity.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_NETTY_KEEP_ALIVE_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_NETTY_KEEP_ALIVE_TIME+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.compression]]`link:#quarkus-grpc-config-group-config-grpc-server-configuration_quarkus.grpc.server.compression[quarkus.grpc.server.compression]`

[.description]
--
gRPC compression, e.g. "gzip"

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_GRPC_SERVER_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_GRPC_SERVER_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
